# route_rs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  config.rs  main.rs  mc_kernel.rs  network.rs  routing.rs  state.rs
src/io/: csv.rs  mod.rs  netcdf.rs  results.rs
tests/config/: cat-486888_subset.gpkg  realization.json  troute.yaml
tests/config/cat_config/CFE/: cat-486888.ini
tests/one_cat/config/cat_config/NOAH-OWP-M/: cat-486888.input
tests/troute/: troute_output_201001010000.nc
