[package]
name = "route_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = "4.5.38"
csv = "1.3.1"
indicatif = "0.17.11"
netcdf = "0.11.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
rusqlite = "0.35.0"
serde = "1.0.219"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
